--- a/src/client/css/classes.css
+++ b/src/client/css/classes.css
@@ -1,7 +1,7 @@
 .addNewClassLink {
   text-align: center;
 }
-.timeBlock {
+.timeRow {
   width: 100%;
   height: 100px;
   border-bottom: solid #bdbdbd 1px
