--- a/src/server/views/validation/signin.html
+++ b/src/server/views/validation/signin.html
@@ -5,23 +5,23 @@
 {% block content %}
 
 <div class="container">
-<form class="form-horizontal" method="POST" action="/users/signin">
-    <div class="form-group">
-      <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" id="sign_in_email" name="email">
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="password" class="col-lg-2 control-label">Password</label>
-      <div class="col-lg-10">
-        <input type="password" class="form-control" id="sign_in_password" name="password">
-      </div>
-    </div>
-    <div class="form-group">
-      <button type="submit"  id="signInButton" class="btn btn-default">Submit</button>
-    </div>
-  </form>
+  <row class="somethingThatWorks">
+    <section class="col-md-7">
+      <form class="form-horizontal" method="POST" action="/users/signin">
+        <div class="form-group">
+          <label for="inputEmail" class="col-md-2 control-label" id="userLabel">Email</label>
+          <div class="col-md-10">
+            <input type="text" class="form-control personalInfo" id="sign_in_email" name="email">
+          </div>
+          <label for="password" class="col-md-2 control-label" id="userLabel">Password</label>
+          <div class="col-md-10">
+            <input type="password" class="form-control personalInfo" id="sign_in_password" name="password">
+          </div>
+          <button type="submit"  id="signInButton" class="btn btn-default">Submit</button>
+        </div>
+      </form>
+    </section>
+  </row>
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/js/signin.js"></script>
