--- a/src/server/views/user_profile.html
+++ b/src/server/views/user_profile.html
@@ -3,64 +3,69 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-<div>
+<div class="somethingThatWorks">
+    <section class="col-md-6">
     <div>
-      <label for="inputEmail">Email</label>
+      <label id="userLabel" for="inputEmail">Email</label>
       <div>
-        <p id="email" placeholder="Email">{{ renderObject.email }}</p>
+        <p class="" id="email" placeholder="Email">{{ renderObject.email }}</p>
       </div>
     </div>
     <div>
-      <label for="first_name">First Name</label>
+      <label id="userLabel" for="first_name">First Name</label>
       <div>
-        <p id="firstName">{{ renderObject.first_name }}</p>
+        <p class="" id="firstName">{{ renderObject.first_name }}</p>
       </div>
     </div>
     <div>
-      <label for="last_name">Last Name</label>
+      <label id="userLabel" for="last_name">Last Name</label>
       <div>
-        <p id="lastName">{{ renderObject.last_name }} </p>
+        <p class="" id="lastName">{{ renderObject.last_name }} </p>
       </div>
     </div>
     <div>
-      <label for="address_line_1">Street Address 1</label>
-      <div>
-        <p id="line_1">{{ renderObject.address_line_1 }}
-      </div>
-    </div>
+    <label id="userLabel" for="comments">What should we know about you?</label>
     <div>
-      <label for="address_line_2">Street Address 2</label>
-      <div>
-        <p id="line 2">{{ renderObject.address_line_2 }}
-      </div>
+      <p id="" id="comments">{{ renderObject.comments}}
     </div>
-    <div>
-      <label for="city">City</label>
-      <div>
-        <p id="city">{{ renderObject.city }}
-      </div>
-    </div>
-    <div>
-      <label for="state">State</label>
-      <div>
-        <p id="state">{{ renderObject.state}}
-      </div>
-    </div>
-    <div>
-      <label for="zip">Zip</label>
-      <div>
-        <p id="zip">{{ renderObject.zip }}
-      </div>
-    </div>
-    <div>
-      <label for="comments">What should we know about you?</label>
-      <div>
-        <p id="comments">{{ renderObject.comments}}
-      </div>
     </div>
     <div>
         <a href="/users/edit/user_edit_profile" id="editProfile">Edit</a>
     </div>
+    </section>
+    <section class="col-md-6">
+      <div>
+      <label id="userLabel" for="address_line_1">Street Address 1</label>
+      <div>
+        <p id="" id="line_1">{{ renderObject.address_line_1 }}
+      </div>
+    </div>
+    <div>
+      <label id="userLabel" for="address_line_2">Street Address 2</label>
+      <div>
+        <p id="" id="line 2">{{ renderObject.address_line_2 }}
+      </div>
+    </div>
+    <div>
+      <label id="userLabel" for="city">City</label>
+      <div>
+        <p class="" id="city">{{ renderObject.city }}
+      </div>
+    </div>
+    <div>
+      <label id="userLabel" for="state">State</label>
+      <div>
+        <p class="" id="state">{{ renderObject.state}}
+      </div>
+    </div>
+    <div>
+      <label id="userLabel" for="zip">Zip</label>
+      <div>
+        <p class="" id="zip">{{ renderObject.zip }}
+      </div>
+    </div>
+    <div>
+    </section>
 </div>
 
 <script type="text/javascript" src="/js/edit_user.js"></script>
