--- a/src/client/css/classes.css
+++ b/src/client/css/classes.css
@@ -10,3 +10,32 @@
 .schedule {
   position:relative;
 }
+
+.weekDayHeader {
+  border-radius: 5px;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+}
+
+.weekDayHeader:hover {
+  transform: scale(1.1, 1.1);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  cursor: pointer;
+}
+
+.weekDayHeader:active {
+  transform: scale(1.1, 1.1);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+.addSchedule {
+  font-size: 1.5em;
+  position: absolute;
+  top: 5px;
+  right: 100px;
+  color: #669900
+}
+
+.classBlock {
+  display: none;
+}
