if a user is not signed in, they can not sign up for a class. if a user is signed in, they can sign up for a class on the individual class page.

--- a/src/server/views/classes/class.html
+++ b/src/server/views/classes/class.html
@@ -6,11 +6,13 @@
 {{user.is_admin}}
   <div class="container">
 
-    <div class="row">
+    {% for user in users %}
+    <div class="row idenfity_user" name="idenfity_user" value="{{user.id}}">
+    {% endfor %}
 
       <div class="col-md-5">
-      {% for class in classes %}
-         <input type="hidden" value="{{class.id}}" name="id" id="single_class_id">
+        {% for class in classes %}
+         <id="class_num" input type="hidden" value="{{class.id}}" name="class" id="single_class_id">
         <h2>{{class.name}}</h2><br><br>
         <img src="../../images/{{class.photo_url}}" alt="instructor photo">
       </div>
@@ -23,15 +25,16 @@
           <p>End Time: {{class.end_time}}</p>
           <p>Available Spots: {{class.size}}</p>
           <p>{{class.description}}</p><br>
+          <a href="/classes/{{class.id}}/add_user"><button type="button" class="btn btn-success add_user_to_class" name="{{class.id}}" data-id="{{class.id}}">Sign Up For Class</button></a> <div class="alertuser"></div>
+          {% if user.is_admin %}
           <a href="/classes/{{class.id}}/class/edit"><button type="button" class="btn btn-primary edit_class"  name="{{class.id}}" data-id={{class.id}}>Edit Class</button></a>
           <a href="/classes/{{class.id}}/class"><button type="button" class="btn btn-danger delete_class" name="{{class.id}}" data-id={{class.id}}>Delete Class</button></a>
-          {% endfor %}
+          {% endif %}
       </div>
+      {% endfor %}
     </div>
     <br><br>
     {% if user.is_admin %}
-
-    test
     <div class="row">
       <div class="col-md-12">
         <h3>Enrollment</h3>
