--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -126,6 +126,12 @@ header {
   font-size: 24px;
 }
 
+/* user form validation */
+.validation {
+  color: red;
+  font-size: 24px;
+}
+
 /* instractors page */
 .window {
   display: inline-block;
