--- a/src/server/views/instructors/instructor.html
+++ b/src/server/views/instructors/instructor.html
@@ -7,6 +7,7 @@
 <div class="container">
   <div class="row">
     <section class="col-md-5">
+      {{ error }}
       <h2>Instructor</h2>
       <img src="../images/{{instructor[0].photo_url}}" alt="instractor photo not available">
       <br>
